--- a/Prointer 4/AndroidManifest.xml
+++ b/Prointer 4/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="PROINTER 4"
+        android:label="Controle de Acesso"
         android:theme="@style/AppTheme">
         
         <activity
@@ -26,7 +26,7 @@
         
         <activity
             android:name=".DeviceListActivity"
-            android:label="@string/app_name"
+            android:label="Controle de Acesso"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -37,8 +37,8 @@
         
         <activity
             android:name=".ConsultarActivity"
-            android:label="@string/title_activity_consultar" >
-            
+            android:label="Controle de Acesso"
+            android:screenOrientation="portrait">
         </activity>
         
        </application>
